<resources>
    <string name="app_name">Notes</string>
    <string name="note">Ujwal-50 aaditya-60</string>
    <string name="add_note">Add Note</string>
    <string name="todo">TODO</string>
    <string name="enter_a_note_here">Enter a note here</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="date">Date</string>
    <string name="start_typing">Start typing...</string>
    <string name="delete">Delete</string>
    <string name="rv_note_textview">Note</string>
</resources>